--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,11 @@ bld/
 [Ll]og/
 [Ll]ogs/
 
+# RimWorld mod assemblies - DO NOT IGNORE (users need the DLL)
+# Keep the compiled DLL in the repository
+!1.6/Assemblies/
+!1.6/Assemblies/*.dll
+
 # Visual Studio 2015/2017 cache/options directory
 .vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
